--- a/index.html
+++ b/index.html
@@ -1,14 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Robotics Engineering Conference</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="script.js"></script>
+<section id="top-head">
+    <ul>
+        <li><a id=dark-head href="#"><i class="lab la-facebook-f"></i></a></li>
+        <li><a id=dark-head href="#"><i class="lab la-twitter"></i></a></li>
+        <li><a id=dark-head href="#"><p>English</p></a></li>
+        <li><a id=dark-head href="#"><p>My Page</p></a></li>
+        <li><a id=dark-head href="#"><p>Logout</p></a></li>
+    </ul>
+</section>
+<header>    
+<section class="desktop-menu">
+    <div class="logo">
+        <i class="las la-globe"></i>
+        <a class="title">United Robotics</a>
+    </div>
+      <ul class="header-list">
+        <li><a id=light-head href="about.html">About</a></li>
+        <li><a id=light-head href="#">Program</a></li>
+        <li><a id=light-head href="#">Join</a></li>
+        <li><a id=light-head href="#">Sponsor</a></li>
+        <li><a id=light-head href="#">News</a></li>
+      </ul>
+</section>
+    <div class="mobile-menu">
+      <button class="hamburger"><i class="las la-bars"></i></button>
+    </div>
+    <div id="overlay">
+        <button id="close-button"><i class="las la-times"></i></button>
+        <ul class="overlay-list">
+          <li><a id=light-head href="about.html">About</a></li>
+          <li><a id=light-head href="#">Program</a></li>
+          <li><a id=light-head href="#">Join</a></li>
+          <li><a id=light-head href="#">Sponsor</a></li>
+          <li><a id=light-head href="#">News</a></li>
+        </ul>
+    </div>         
+</header>
+<section class="main">
+  <main>
+    <h1>Welcome, World! We are creating Future!</h1>
+    <h2>Robotics Engineering Conference 2023</h2>
+    <p>Join us for an exciting conference on the latest advancements in robotics engineering. Our conference will feature talks from industry experts, hands-on workshops, and networking opportunities with other robotics enthusiasts.</p>
+    <h4>2023.02.15(Wed) ~ 15(Thru)</h4>
+    <h3>@ Maddison Square Center. New York City, NY</h3>
+  </main>      
+</section>
+<section id="program">
+    <h3>Main Program</h3>
+    <i class="las la-minus"></i>
+        <ul class="program-list">
+            <li id="table"><i class="las la-chalkboard-teacher"></i><h2>Lecture</h2><p>Listen to the speakers from various companies in robotics engineering branch</p></li>
+            <li id="table"><i class="las la-images"></i><h2>Exhibition</h2><p>Explore the cutting-edge world of robotics and witness the future of automation in action at our exciting robotics exhibition</p></li>
+            <li id="table"><i class="las la-comments"></i><h2>Forum</h2><p>Share ideas and discuss the latest advancements in robotics at our informative and engaging forum</p></li>
+            <li id="table"><i class="las la-cogs"></i><h2>Workshop</h2><p>Learn the practical skills necessary for designing, building, and programming robots on our workshops</p></li>
+            <li id="table"><i class="lab la-connectdevelop"></i><h2>Connect</h2><p>Connect with like-minded individuals and expand your network in the exciting field of robotics at Robotics Connect</p></li>
+        </ul>
+    <a href="#">SEE THE WHOLE PROGRAM</a>
+</section>
+<section class="ft-speakers">
+    <h3>Featured Speakers</h3>
+    <i class="las la-minus"></i>
+    <div id="featured-speakers"></div>
+</section>
+<section id="partners">
+    <h3>Partners</h3>
+    <i class="las la-minus"></i>
+    <ul class="partners-list">
+        <li id="table2"><i class="lab la-windows"></i><a href="#">Microsoft</a></li>
+        <li id="table2"><i class="lab la-android"></i><a href="#">Android</a></li>
+        <li id="table2"><i class="las la-vr-cardboard"></i><a href="#">iRobot</a></li>
+        <li id="table2"><i class="las la-microscope"></i><a href="#">TechLab Ind.</a></li>
+        <li id="table2"><i class="las la-satellite"></i><a href="#">SpaceJet</a></li>
+    </ul>
+</section>
+<footer>
+    <i class="las la-globe"></i>
+    <a class="title">United Robotics</a>
+    <p>&copy; 2023 Robotics Engineering. All Rights Reserved</p>
+</footer>
+  
+  <script src="script.js"></script>
 </body>
 </html>
