--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <a class="title">United Robotics</a>
     </div>
       <ul class="header-list">
-        <li><a id=light-head href="about.html">About</a></li>
+        <li><a id=light-head href="index.html">Home</a></li>
         <li><a id=light-head href="#">Program</a></li>
         <li><a id=light-head href="#">Join</a></li>
         <li><a id=light-head href="#">Sponsor</a></li>
