--- a/about.html
+++ b/about.html
@@ -23,10 +23,9 @@
 </section>
 <header>    
 <section class="desktop-menu">
-    <div class="logo">
-        <i class="las la-globe"></i>
-        <a class="title">United Robotics</a>
-    </div>
+  <div class="logo">
+    <a href="index.html" class="title"><i class="las la-globe"></i>United Robotics</a>
+</div>
       <ul class="header-list">
         <li><a id=light-head href="index.html">Home</a></li>
         <li><a id=light-head href="#">Program</a></li>
