--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 <header>    
 <section class="desktop-menu">
     <div class="logo">
-        <i class="las la-globe"></i>
-        <a class="title">United Robotics</a>
+        <a href="index.html" class="title"><i class="las la-globe"></i>United Robotics</a>
     </div>
       <ul class="header-list">
         <li><a id=light-head href="about.html">About</a></li>
