--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
 </div>
       <ul class="header-list">
         <li><a id=light-head href="index.html">Home</a></li>
-        <li><a id=light-head href="#">Program</a></li>
-        <li><a id=light-head href="#">Join</a></li>
-        <li><a id=light-head href="#">Sponsor</a></li>
+        <li><a id=light-head href="#program">Program</a></li>
+        <li><a id=light-head href="#form">Join</a></li>
+        <li><a id=light-head href="#partners">Sponsor</a></li>
         <li><a id=light-head href="#">News</a></li>
       </ul>
 </section>
@@ -41,9 +41,9 @@
         <button id="close-button"><i class="las la-times"></i></button>
         <ul class="overlay-list">
           <li><a id=light-head href="index.html">Home</a></li>
-          <li><a id=light-head href="#">Program</a></li>
-          <li><a id=light-head href="#">Join</a></li>
-          <li><a id=light-head href="#">Sponsor</a></li>
+          <li><a id=light-head href="#program">Program</a></li>
+          <li><a id=light-head href="#form">Join</a></li>
+          <li><a id=light-head href="#partners">Sponsor</a></li>
           <li><a id=light-head href="#">News</a></li>
         </ul>
     </div>         
