--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="abt-style.css">
 </head>
 <body>
 <section id="top-head">
@@ -28,10 +28,10 @@
 </div>
       <ul class="header-list">
         <li><a id=light-head href="index.html">Home</a></li>
-        <li><a id=light-head href="#program">Program</a></li>
-        <li><a id=light-head href="#form">Join</a></li>
+        <li><a id=light-head href="index.html">Program</a></li>
+        <li><a id=light-head href="#">Join</a></li>
         <li><a id=light-head href="#partners">Sponsor</a></li>
-        <li><a id=light-head href="#">News</a></li>
+        <li><a id=light-head href="#past">News</a></li>
       </ul>
 </section>
     <div class="mobile-menu">
@@ -41,51 +41,58 @@
         <button id="close-button"><i class="las la-times"></i></button>
         <ul class="overlay-list">
           <li><a id=light-head href="index.html">Home</a></li>
-          <li><a id=light-head href="#program">Program</a></li>
-          <li><a id=light-head href="#form">Join</a></li>
+          <li><a id=light-head href="index.html">Program</a></li>
+          <li><a id=light-head href="#">Join</a></li>
           <li><a id=light-head href="#partners">Sponsor</a></li>
-          <li><a id=light-head href="#">News</a></li>
+          <li><a id=light-head href="#past">News</a></li>
         </ul>
     </div>         
 </header>
 <section class="main">
   <main>
-    <h2>Welcome to the Robotics Engineering Conference website! </h2>
-    <h6>Here you will find all the information you need about our annual conference, which is dedicated to the latest advancements and innovations in the field of robotics.</h6>
-    <p>Our conference brings together robotics experts and industry professionals from around the world to share their knowledge and promote collaboration and innovation in the field.</p>
-    <h6>We look forward to seeing you at the Robotics Engineering Conference, where you will have the opportunity to learn, connect, and be inspired by the latest advancements in the field of robotics.</h6>
-    <h4>2023.02.15(Wed) ~ 15(Thru)<br>@ Maddison Square Center. New York City, NY</h4>
-  </main>      
+    <h1>"We are creating the Future!"</h1>
+    <h2 id="">Robotics Engineering Conference 2023</h2>
+    
+    <p>The summit brings together a multitude of highly esteemed experts in the field of Robotics Engineering to showcase the latest innovations and advancements in the industry, as well as discuss the various benefits of implementing robotics in our daily lives.
+    We welcome you to join us in this event and be a part of the collective effort to revolutionize the future of robotics engineering.</p>
+    
+    <h3>Please reach us on Email for further questions about RE Summint 2023</h3>
+    <a href="#">support@rss2023.com<i class="las la-angle-right"></i></a>
+  </main> 
+  </section>
+  <section id="logo-info">
+    <h3>Robotics Engineering Global Summit 2023 Logo</h3>
+    <i class="las la-minus"></i>
+    <p>The Logo of Robotics Engineering Summit 2023 was decide through competition on August 2022</p>
+    <div id="main2">
+    <div id="img">
+      <i class="las la-globe"></i>
+    </div>
+    <div id="txt">
+      <h2>RE Global</h2>
+      <h3>summit 2023</h3>
+      <h4>15th - 17th Feb 2023 | New York, USA</h4>
+    </div>
+    </div>
 </section>
-<section id="form">
-  <h1>Robotics Engineering Conference Registration Form</h1>
-  <form action="https://formspree.io/f/mqkoarkl" method="POST">
-    <label for="name">name:</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="email">email:</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="affiliation">affiliation:</label>
-    <input type="text" id="affiliation" name="affiliation">
-
-    <label for="registration-type">registration type:</label>
-    <select id="registration-type" name="registration-type">
-      <option value="standard">standard</option>
-      <option value="student">student</option>
-      <option value="industry">industry</option>
-    </select>
-
-    <label for="attendee-type">attendee type:</label>
-    <select id="attendee-type" name="attendee-type">
-      <option value="researcher">researcher</option>
-      <option value="engineer">engineer</option>
-      <option value="educator">educator</option>
-      <option value="other">other</option>
-    </select>
-
-    <button type="submit">Register</button>
-  </form>
+<section id="past">
+  <p>See the past RE Global Summits</p>
+  <i class="las la-minus"></i>
+  <div class="past-card">
+    <div id="card1"><div class="bg-1"><h2>2021</h2><p>Robotics Engineering Summit 2021 in Seoul</p></div></div>
+    <div id="card2"><div class="bg-2"><h2>2022</h2><p>Robotics Engineering Summit 2021 in Tokyo</p></div></div>
+  </div>
+</section>
+<section id="partners">
+  <h3>Partner</h3>
+  <i class="las la-minus"></i>
+  <ul class="partners-list">
+      <li id="table2"><i class="lab la-windows"></i><a href="#">Microsoft</a></li>
+      <li id="table2"><i class="lab la-android"></i><a href="#">Android</a></li>
+      <li id="table2"><i class="las la-vr-cardboard"></i><a href="#">iRobot</a></li>
+      <li id="table2"><i class="las la-microscope"></i><a href="#">TechLab</a></li>
+      <li id="table2"><i class="las la-satellite"></i><a href="#">SpaceJet</a></li>
+  </ul>
 </section>
 <footer>
     <i class="las la-globe"></i>
