--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <ul class="header-list">
         <li><a id=light-head href="about.html">About</a></li>
         <li><a id=light-head href="#program">Program</a></li>
-        <li><a id=light-head href="#form">Join</a></li>
+        <li><a id=light-head href="about.html">Join</a></li>
         <li><a id=light-head href="#partners">Sponsor</a></li>
         <li><a id=light-head href="#">News</a></li>
       </ul>
@@ -42,7 +42,7 @@
         <ul class="overlay-list">
           <li><a id=light-head href="about.html">About</a></li>
           <li><a id=light-head href="#program">Program</a></li>
-          <li><a id=light-head href="#form">Join</a></li>
+          <li><a id=light-head href="about.html">Join</a></li>
           <li><a id=light-head href="#partners">Sponsor</a></li>
           <li><a id=light-head href="#">News</a></li>
         </ul>
@@ -50,11 +50,11 @@
 </header>
 <section class="main">
   <main>
-    <h1>Welcome, World! We are creating Future!</h1>
+    <h1>"We are creating the Future!"</h1>
     <h2>Robotics Engineering Conference 2023</h2>
     <p>Join us for an exciting conference on the latest advancements in robotics engineering. Our conference will feature talks from industry experts, hands-on workshops, and networking opportunities with other robotics enthusiasts.</p>
-    <h4>2023.02.15(Wed) ~ 15(Thru)</h4>
-    <h3>@ Maddison Square Center. New York City, NY</h3>
+    <h3>2023.02.15(Wed) ~ 17(Fri)</h3>
+    <h4>@ Maddison Square Center, New York City, NY</h4>
   </main>      
 </section>
 <section id="program">
@@ -68,6 +68,7 @@
             <li id="table"><i class="lab la-connectdevelop"></i><h2>Connect</h2><p>Connect with like-minded individuals and expand your network in the exciting field of robotics at Robotics Connect</p></li>
         </ul>
     <a href="#">SEE THE WHOLE PROGRAM</a>
+    <a href="about.html" id="join">Join RE Conference 2023</a>
 </section>
 <section class="ft-speakers">
     <h3>Featured Speakers</h3>
@@ -75,13 +76,13 @@
     <div id="featured-speakers"></div>
 </section>
 <section id="partners">
-    <h3>Partners</h3>
+    <h3>Partner</h3>
     <i class="las la-minus"></i>
     <ul class="partners-list">
         <li id="table2"><i class="lab la-windows"></i><a href="#">Microsoft</a></li>
         <li id="table2"><i class="lab la-android"></i><a href="#">Android</a></li>
         <li id="table2"><i class="las la-vr-cardboard"></i><a href="#">iRobot</a></li>
-        <li id="table2"><i class="las la-microscope"></i><a href="#">TechLab Ind.</a></li>
+        <li id="table2"><i class="las la-microscope"></i><a href="#">TechLab</a></li>
         <li id="table2"><i class="las la-satellite"></i><a href="#">SpaceJet</a></li>
     </ul>
 </section>
