--- a/about.html
+++ b/about.html
@@ -98,6 +98,7 @@
     <i class="las la-globe"></i>
     <a class="title">United Robotics</a>
     <p>&copy; 2023 Robotics Engineering. All Rights Reserved</p>
+    <h6>Designed and developed by US Robotics</h6>
 </footer>
   
   <script src="script.js"></script>
