corrected mobile version home page

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
     <p>&copy; 2023 Robotics Engineering. All Rights Reserved</p>
     <h6>Designed and developed by US Robotics</h6>
 </footer>
+<section class="see-more">
+  <button id="see-more"><h2>MORE</h2><i class="las la-angle-down"></i>
+  </button>
+</section>
   
   <script src="script.js"></script>
 </body>
